--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="navbar-container">
       <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Untitled-design-2.png" loading="lazy" width="315" alt="" class="logo-icon"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="#" class="nav-link left-margin w-nav-link">Benefits</a>
-        <a href="information/features.html" class="nav-link left-margin w-nav-link">Features</a>
-        <a href="information/pricing.html" class="nav-link left-margin w-nav-link">Pricing</a>
+        <a href="#benefits" class="nav-link left-margin w-nav-link">Benefits</a>
+        <a href="#features" class="nav-link left-margin w-nav-link">Features</a>
+        <a href="#pricing" class="nav-link left-margin w-nav-link">Pricing</a>
         <div class="buttons-container">
-          <a href="#" class="primary-button left-margin w-button">Get the Template</a>
+          <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button left-margin w-button">Get the Template</a>
         </div>
       </nav>
       <div class="menu-button w-nav-button">
@@ -52,7 +52,7 @@
           <h1 data-w-id="63e32977-763f-4911-cfc6-97fab5eefcb6" style="opacity:0" class="h1 bottom-margin">Manage Your Next Agile Project With Notion</h1>
           <div data-w-id="1fad84ec-3e63-7313-e729-4a6488a67b14" style="opacity:0" class="text">A single dashboard to take you from the start to the finish of your Agile development project</div>
           <div data-w-id="b1c9e320-7de5-80b3-f620-57d570ec3610" style="opacity:0" class="buttons-container top-margin">
-            <a href="#" class="download-button right-margin w-inline-block">
+            <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="download-button right-margin w-inline-block">
               <div>Get the Template</div>
             </a>
           </div>
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <div class="section gray wf-section">
+  <div class="section gray wf-section" id="benefits">
     <div class="container">
       <h2 data-w-id="906b3b14-3f00-c82d-c04d-a6d06416f819" style="opacity:0" class="h2 center">Key Benefits</h2>
       <div class="main-grid">
@@ -93,7 +93,7 @@
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section wf-section" id="features">
     <div class="container">
       <h2 data-w-id="c8e3f776-126a-a96a-f28a-b3173a22f8af" style="opacity:0" class="h2 center">What&#x27;s Included?</h2>
       <div class="medium-container">
@@ -126,7 +126,7 @@
       </div>
     </div>
   </div>
-  <div class="section gray wf-section">
+  <div class="section gray wf-section" id="pricing">
     <div class="container">
       <div class="center-container">
         <div data-w-id="ab8e608f-fe31-826e-4702-8a9e8160153b" style="opacity:0" class="text small-title">PRICING</div>
@@ -159,7 +159,7 @@
               <p class="text gray">Lifetime Access</p>
             </div>
           </div>
-          <a href="#" class="primary-button stretch w-button">Get the Template</a>
+          <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button stretch w-button">Get the Template</a>
         </div>
       </div>
     </div>
