Updated layout for mobile - correct files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 16 2022 12:15:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="6205398c9aa9e0402494f028" data-wf-site="6205398c9aa9e0f99594f025">
 <head>
   <meta charset="utf-8">
@@ -29,11 +28,11 @@
     <div class="navbar-container">
       <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Untitled-design-2.png" loading="lazy" width="315" alt="" class="logo-icon"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
-        <a href="#benefits" class="nav-link left-margin w-nav-link">Benefits</a>
-        <a href="#features" class="nav-link left-margin w-nav-link">Features</a>
-        <a href="#pricing" class="nav-link left-margin w-nav-link">Pricing</a>
+        <a href="#" class="nav-link left-margin w-nav-link">Benefits</a>
+        <a href="information/features.html" class="nav-link left-margin w-nav-link">Features</a>
+        <a href="information/pricing.html" class="nav-link left-margin w-nav-link">Pricing</a>
         <div class="buttons-container">
-          <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button left-margin w-button">Get the Template</a>
+          <a href="http://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button left-margin w-button">Get the Template</a>
         </div>
       </nav>
       <div class="menu-button w-nav-button">
@@ -52,16 +51,16 @@
           <h1 data-w-id="63e32977-763f-4911-cfc6-97fab5eefcb6" style="opacity:0" class="h1 bottom-margin">Manage Your Next Agile Project With Notion</h1>
           <div data-w-id="1fad84ec-3e63-7313-e729-4a6488a67b14" style="opacity:0" class="text">A single dashboard to take you from the start to the finish of your Agile development project</div>
           <div data-w-id="b1c9e320-7de5-80b3-f620-57d570ec3610" style="opacity:0" class="buttons-container top-margin">
-            <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="download-button right-margin w-inline-block">
+            <a href="http://andysnotion.gumroad.com/l/agilenotiondashboard" class="download-button right-margin w-inline-block">
               <div>Get the Template</div>
             </a>
           </div>
         </div>
-        <div id="w-node-_7201a9bb-7f9a-326f-cbc5-0b50b872c752-2494f028" class="hero-image"><img src="images/Mask.png" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="f985398b-490d-206d-d4d5-3d981abde1d9" srcset="images/Mask-p-500.png 500w, images/Mask.png 804w" sizes="100vw" alt="Blur Background Hero" class="blur-background"><img src="images/Macbook-Pro.png" loading="lazy" data-w-id="a5f41490-f2a2-3819-a452-70e6ff169af2" sizes="(max-width: 479px) 83vw, (max-width: 991px) 360px, 49vw" srcset="images/Macbook-Pro-p-500.png 500w, images/Macbook-Pro-p-800.png 800w, images/Macbook-Pro-p-1080.png 1080w, images/Macbook-Pro.png 1185w" alt="" class="hero-phone"></div>
+        <div id="w-node-_7201a9bb-7f9a-326f-cbc5-0b50b872c752-2494f028" class="hero-image"><img src="images/Mask.png" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0, 0, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="f985398b-490d-206d-d4d5-3d981abde1d9" srcset="images/Mask-p-500.png 500w, images/Mask.png 804w" sizes="(max-width: 479px) 320px, 600px" alt="Blur Background Hero" class="blur-background"><img src="images/Notion-Agile-Dashboard-Macbook-Mockup.png" loading="lazy" data-w-id="a5f41490-f2a2-3819-a452-70e6ff169af2" sizes="(max-width: 479px) 83vw, (max-width: 767px) 92vw, (max-width: 991px) 500px, 49vw" srcset="images/Notion-Agile-Dashboard-Macbook-Mockup-p-500.png 500w, images/Notion-Agile-Dashboard-Macbook-Mockup-p-800.png 800w, images/Notion-Agile-Dashboard-Macbook-Mockup-p-1080.png 1080w, images/Notion-Agile-Dashboard-Macbook-Mockup.png 1168w" alt="" class="hero-phone"></div>
       </div>
     </div>
   </div>
-  <div class="section gray wf-section" id="benefits">
+  <div class="section gray wf-section">
     <div class="container">
       <h2 data-w-id="906b3b14-3f00-c82d-c04d-a6d06416f819" style="opacity:0" class="h2 center">Key Benefits</h2>
       <div class="main-grid">
@@ -93,7 +92,7 @@
       </div>
     </div>
   </div>
-  <div class="section wf-section" id="features">
+  <div class="section wf-section">
     <div class="container">
       <h2 data-w-id="c8e3f776-126a-a96a-f28a-b3173a22f8af" style="opacity:0" class="h2 center">What&#x27;s Included?</h2>
       <div class="medium-container">
@@ -101,9 +100,9 @@
           <div data-w-id="1933ef09-3461-666a-4b4f-65c0da79e404" style="opacity:0" class="text small-title">INTEGRATION</div>
           <h2 data-w-id="1933ef09-3461-666a-4b4f-65c0da79e406" style="opacity:0" class="h2 bottom-margin">Fully Integrated Dashboard</h2>
           <div data-w-id="1933ef09-3461-666a-4b4f-65c0da79e40a" style="opacity:0" class="large-text">View the timelines of your themes and epics, as well as the progress of your sprints within a single workspace</div>
-        </div><img src="images/4.png" loading="lazy" style="opacity:0" data-w-id="9a6fca1b-f1aa-0e41-8e0a-f783b8608c9f" srcset="images/4-p-500.png 500w, images/4-p-800.png 800w, images/4.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, (max-width: 991px) 47vw, 450px" alt="" class="image-section">
+        </div><img class="image-section" src="images/Notion-Agile-Dashboard.png" alt="Notion Agile Dashboard for Sprint and Scrum Planning" style="opacity:0" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, 450px" data-w-id="9a6fca1b-f1aa-0e41-8e0a-f783b8608c9f" loading="lazy" srcset="images/Notion-Agile-Dashboard-p-500.png 500w, images/Notion-Agile-Dashboard-p-800.png 800w, images/Notion-Agile-Dashboard.png 960w">
       </div>
-      <div class="medium-container"><img src="images/Untitled-design-1.png" loading="lazy" style="opacity:0" data-w-id="74c0d348-fa22-5f25-08d0-14f1fe6fd7ec" srcset="images/Untitled-design-1-p-500.png 500w, images/Untitled-design-1-p-800.png 800w, images/Untitled-design-1.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, (max-width: 991px) 47vw, 450px" alt="" class="image-section">
+      <div class="medium-container"><img class="image-section" src="images/Untitled-design-1.png" alt="Product Roadmap, Project Kick Off and Product Vision Notion Templates" style="opacity:0" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, 450px" data-w-id="74c0d348-fa22-5f25-08d0-14f1fe6fd7ec" loading="lazy" srcset="images/Untitled-design-1-p-500.png 500w, images/Untitled-design-1-p-800.png 800w, images/Untitled-design-1.png 960w">
         <div class="small-container">
           <div data-w-id="74c0d348-fa22-5f25-08d0-14f1fe6fd7ee" style="opacity:0" class="text small-title">VISION</div>
           <h2 data-w-id="74c0d348-fa22-5f25-08d0-14f1fe6fd7f0" style="opacity:0" class="h2 bottom-margin">Product Roadmap and Vision Templates</h2>
@@ -115,9 +114,9 @@
           <div data-w-id="d8219b0f-6896-91af-5706-eda72f65bd2f" style="opacity:0" class="text small-title">PROGRESSION</div>
           <h2 data-w-id="d8219b0f-6896-91af-5706-eda72f65bd31" style="opacity:0" class="h2 bottom-margin">Theme, Epic, Sprint and User Story Monitoring</h2>
           <div data-w-id="d8219b0f-6896-91af-5706-eda72f65bd33" style="opacity:0" class="large-text">Easily monitor the progress of product development in one place</div>
-        </div><img src="images/2.png" loading="lazy" style="opacity:0" data-w-id="d8219b0f-6896-91af-5706-eda72f65bd35" srcset="images/2-p-500.png 500w, images/2-p-800.png 800w, images/2.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, (max-width: 991px) 47vw, 450px" alt="" class="image-section">
+        </div><img src="images/2.png" loading="lazy" style="opacity:0" data-w-id="d8219b0f-6896-91af-5706-eda72f65bd35" srcset="images/2-p-500.png 500w, images/2-p-800.png 800w, images/2.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, 450px" alt="" class="image-section">
       </div>
-      <div class="medium-container"><img src="images/3.png" loading="lazy" style="opacity:0" data-w-id="ea76658f-5d54-843f-057b-7d330542a220" srcset="images/3-p-500.png 500w, images/3-p-800.png 800w, images/3.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, (max-width: 991px) 47vw, 450px" alt="" class="image-section">
+      <div class="medium-container"><img src="images/3.png" loading="lazy" style="opacity:0" data-w-id="ea76658f-5d54-843f-057b-7d330542a220" srcset="images/3-p-500.png 500w, images/3-p-800.png 800w, images/3.png 960w" sizes="(max-width: 479px) 300px, (max-width: 767px) 92vw, 450px" alt="" class="image-section">
         <div class="small-container">
           <div data-w-id="ea76658f-5d54-843f-057b-7d330542a218" style="opacity:0" class="text small-title">FLEXIBILITY</div>
           <h2 data-w-id="ea76658f-5d54-843f-057b-7d330542a21a" style="opacity:0" class="h2 bottom-margin">Multiple Ready To Use Templates</h2>
@@ -126,10 +125,9 @@
       </div>
     </div>
   </div>
-  <div class="section gray wf-section" id="pricing">
+  <div class="section gray wf-section">
     <div class="container">
       <div class="center-container">
-        <div data-w-id="ab8e608f-fe31-826e-4702-8a9e8160153b" style="opacity:0" class="text small-title">PRICING</div>
         <h2 data-w-id="ab8e608f-fe31-826e-4702-8a9e8160153d" style="opacity:0" class="h2 bottom-margin">Simple Single Price</h2>
         <div data-w-id="ab8e608f-fe31-826e-4702-8a9e8160153f" style="opacity:0" class="large-text">Get lifetime access to the Notion Agile Template with a single price</div>
       </div>
@@ -159,7 +157,7 @@
               <p class="text gray">Lifetime Access</p>
             </div>
           </div>
-          <a href="https://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button stretch w-button">Get the Template</a>
+          <a href="http://andysnotion.gumroad.com/l/agilenotiondashboard" class="primary-button stretch w-button">Get the Template</a>
         </div>
       </div>
     </div>
@@ -167,7 +165,6 @@
   <div class="section wf-section">
     <div class="container">
       <div class="medium-container vertical">
-        <div data-w-id="3475f583-d9a3-e681-2526-71680175eb27" style="opacity:0" class="text small-title">LOOKING FOR ANSWERS TO QUESTIONS?</div>
         <h2 data-w-id="3475f583-d9a3-e681-2526-71680175eb29" style="opacity:0" class="h2 center">Frequently Asked Questions</h2>
       </div>
     </div>
@@ -217,7 +214,7 @@
           </div>
         </div>
         <nav class="accordion-text w-dropdown-list">
-          <p class="text">Apologies in advance if you have found any issues. Please feel free to drop me a tweet or DM on Twitter at: <a href="#https://twitter.com/Andy_Notion">@Andy_Notion</a>
+          <p class="text">Apologies in advance if you have found any issues. <br>To help resolve any issues, please feel free to drop me a tweet or DM on Twitter at: <a href="#https://twitter.com/Andy_Notion">@Andy_Notion<br></a>
           </p>
         </nav>
       </div>
